--- a/src/app/ui/components/product/product-detail/product-detail.component.html
+++ b/src/app/ui/components/product/product-detail/product-detail.component.html
@@ -86,6 +86,7 @@
           <button *ngFor="let featureValue of featurePair.value" 
                   class="feature-button visual-feature-button"
                   [class.selected]="isFeatureValueSelected(featurePair.key, featureValue)"
+                  [class.incompatible]="!isFeatureValueCompatible(featurePair.key, featureValue)"
                   (click)="onFeatureSelect(featurePair.key, featureValue)">
             <img [src]="getFeatureImage(featurePair.key, featureValue)" 
                  [alt]="featureValue" 
@@ -99,6 +100,7 @@
           <button *ngFor="let featureValue of featurePair.value" 
                   class="feature-button"
                   [class.selected]="isFeatureValueSelected(featurePair.key, featureValue)"
+                  [class.incompatible]="!isFeatureValueCompatible(featurePair.key, featureValue)"
                   (click)="onFeatureSelect(featurePair.key, featureValue)">
             {{featureValue}}
           </button>
