--- a/src/styles.scss
+++ b/src/styles.scss
@@ -362,7 +362,7 @@ ngx-editor ::ng-deep .NgxEditor {
 .products {
   width: 100%;
   max-width: 100%;
-  padding: 0 1rem;
+  //padding: 0 1rem;
   
   app-product-grid {
     width: 100%;
