--- a/src/app/admin/components/products/product-list/product-list.component.html
+++ b/src/app/admin/components/products/product-list/product-list.component.html
@@ -1,95 +1,94 @@
-<div class="container mt-5">
-    <div class="row mb-4">
-      <div class="col-md-12 text-center">
-        <h1 class="page-title">Product List</h1>
-        <p class="page-description">Search and manage your products easily</p>
-      </div>
+<div class="container-fluid">
+  <div class="row mb-4">
+    <div class="col-md-12 text-center">
+      <h1 class="display-5 fw-bold">Product List</h1>
+      <p class="lead">Search and manage your products easily</p>
     </div>
-  
-    <div class="row mb-4">
-      <div class="col-md-12">
-        <div class="search-and-table-container">
+  </div>
+
+  <div class="row mb-4">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-body">
           <form [formGroup]="searchForm" (ngSubmit)="searchProduct(searchForm.get('nameSearch').value)">
-            <mat-form-field appearance="outline" class="full-width">
-              <mat-label>Ürün Ara...</mat-label>
-              <input matInput formControlName="nameSearch" (input)="searchProduct(searchForm.get('nameSearch').value)">
-              <button mat-raised-button class="search-button" type="submit">Ara</button>
-            </mat-form-field>
-          </form>
-  
-    <div class="row">
-      <div class="col-md-12">
-        <table mat-table [dataSource]="pagedProducts" class="mat-elevation-z8 table table-striped table-hover">
-          <ng-container matColumnDef="No">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">No</th>
-            <td mat-cell *matCellDef="let item; let i = index">{{ (currentPageNo - 1) * pageSize + i + 1 }}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="Image">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">Resim</th>
-            <td mat-cell *matCellDef="let item">
-              <img *ngIf="item.showcaseImage" [src]="item.showcaseImage.url" [alt]="item.name" class="product-image">
-              <span *ngIf="!item.showcaseImage">No Image</span>
-            </td>
-          </ng-container>
-
-          <ng-container matColumnDef="Feature">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">Özellik</th>
-            <td mat-cell *matCellDef="let item">
-              <div *ngFor="let feature of item.productFeatureValues">
-                {{ feature.featureValueName }}
-              </div>
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="Product">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">Ürün Adı</th>
-            <td mat-cell *matCellDef="let item">{{ item.name }}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="CategoryName">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">Kategori</th>
-            <td mat-cell *matCellDef="let item">{{ item.categoryName }}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="VariantID">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">Varyant ID</th>
-            <td mat-cell *matCellDef="let item">{{ item.varyantGroupID }}</td>
-          </ng-container>
-
-
-          <ng-container matColumnDef="Update">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">Güncelle</th>
-            <td mat-cell *matCellDef="let item">
-              <a [routerLink]="['/admin/products/product-update', item.id]">
-                <button mat-mini-fab class="edit-button-list">
-                  <mat-icon>edit</mat-icon>
-                </button>
-              </a>
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="Delete">
-            <th mat-header-cell *matHeaderCellDef class="header-cell">Sil</th>
-            <td mat-cell *matCellDef="let item">
-              <div class="app-delete-directive-container">
-                <app-delete-directive 
-                [id]="item.id" 
-                [controller]="'products'" 
-                [itemName]="item.name" 
-                (refresh)="removeProductFromList($event)">
-              </app-delete-directive>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Ürün Ara..." 
+                     formControlName="nameSearch" 
+                     (input)="searchProduct(searchForm.get('nameSearch').value)">
+              <button class="btn btn-primary" type="submit">
+                <i class="bi bi-search"></i> Ara
+              </button>
             </div>
-          </ng-container>
-  
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-  
-        <mat-paginator [length]="count" [pageSize]="pageSize" [pageIndex]="currentPageNo - 1"
-          [pageSizeOptions]="[5, 10, 20]" (page)="onPageChange($event)">
-        </mat-paginator>
+          </form>
+        </div>
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-body table-responsive">
+          <table class="table table-striped table-hover">
+            <thead class="table-dark">
+              <tr>
+                <th scope="col">No</th>
+                <th scope="col">Resim</th>
+                <th scope="col">Özellik</th>
+                <th scope="col">Ürün Adı</th>
+                <th scope="col">Kategori</th>
+                <th scope="col">Varyant ID</th>
+                <th scope="col">Güncelle</th>
+                <th scope="col">Sil</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of pagedProducts; let i = index">
+                <td>{{ (currentPageNo - 1) * pageSize + i + 1 }}</td>
+                <td>
+                  <img *ngIf="item.showcaseImage" [src]="item.showcaseImage.url" [alt]="item.name" class="product-image">
+                  <span *ngIf="!item.showcaseImage" class="badge bg-secondary">No Image</span>
+                </td>
+                <td>
+                  <div *ngFor="let feature of item.productFeatureValues" class="feature-tag">
+                    <span class="badge bg-info text-dark">{{ feature.featureValueName }}</span>
+                  </div>
+                </td>
+                <td>{{ item.name }}</td>
+                <td>{{ item.categoryName }}</td>
+                <td>{{ item.varyantGroupID }}</td>
+                <td>
+                  <a [routerLink]="['/admin/products/product-update', item.id]" class="btn btn-sm btn-warning">
+                    <i class="bi bi-pencil-square"></i>
+                  </a>
+                </td>
+                <td>
+                  <div class="app-delete-directive-container">
+                    <app-delete-directive 
+                      [id]="item.id" 
+                      [controller]="'products'" 
+                      [itemName]="item.name" 
+                      (refresh)="removeProductFromList($event)">
+                    </app-delete-directive>
+                  </div>
+                </td>
+              </tr>
+              <tr *ngIf="pagedProducts.length === 0">
+                <td colspan="8" class="text-center py-4">
+                  No products found
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          
+          <!-- Pagination Component -->
+          <app-pagination 
+            [totalItems]="count" 
+            [pageRequest]="{ pageIndex: currentPageNo - 1, pageSize: pageSize }"
+            (pageChange)="onPageChange($event)">
+          </app-pagination>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
