--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -101,7 +101,7 @@
     <div class="card-grid">
       <div class="info-card">
         <div class="card-image">
-          <img src="../../../../assets/homecard/smddawgolytxwkhqhvll-1280x854.webp" alt="Kalite">
+          <img src="../../../../assets/homecard/bestquality3.avif" alt="Kalite">
         </div>
         <div class="card-content">
           <h3 class="card-title">Best Quality</h3>
@@ -110,7 +110,7 @@
       </div>
       <div class="info-card">
         <div class="card-image">
-          <img src="../../../../assets/homecard/endustri-gorsel-scaled.jpg" alt="İnovasyon">
+          <img src="../../../../assets/homecard/inovation.avif" alt="İnovasyon">
         </div>
         <div class="card-content">
           <h3 class="card-title">Inovation</h3>
@@ -119,7 +119,7 @@
       </div>
       <div class="info-card">
         <div class="card-image">
-          <img src="../../../../assets/homecard/inventario.webp" alt="Müşteri Hizmetleri">
+          <img src="../../../../assets/homecard/forcustomer.avif" alt="Müşteri Hizmetleri">
         </div>
         <div class="card-content">
           <h3 class="card-title">For Customer</h3>
@@ -128,7 +128,7 @@
       </div>
       <div class="info-card">
         <div class="card-image">
-          <img src="../../../../assets/homecard/dasdasdasdadqqqq.jpeg" alt="Sürdürülebilirlik">
+          <img src="../../../../assets/homecard/Sustainability.avif" alt="Sürdürülebilirlik">
         </div>
         <div class="card-content">
           <h3 class="card-title">Sustainability</h3>
